--- a/Migration SQLite 15.11/Migration SQLite 15.11.csproj
+++ b/Migration SQLite 15.11/Migration SQLite 15.11.csproj
@@ -8,8 +8,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.11" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+	
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\Cafe.Models\Cafe.Models.csproj" />
+    <ProjectReference Include="..\CW 13.11 EF Core\CW 13.11 EF Core.csproj" />
   </ItemGroup>
 
 </Project>
