--- a/Cafe/Cafe.csproj
+++ b/Cafe/Cafe.csproj
@@ -9,7 +9,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cafe.Data.MSSQL\Cafe.Data.MSSQL.csproj" />
+    <ProjectReference Include="..\Cafe.Data.SQLite\Cafe.Data.SQLite.csproj" />
     <ProjectReference Include="..\Cafe.Data\Cafe.Data.csproj" />
+    <ProjectReference Include="..\Cafe.Models\Cafe.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
